test/corpus/arrays.txt
=============
Arrays: basic
=============

resource(20) array { 1234, 5678 };

---

(source_file
	(resource
		(params
			(number))
		(array
			(block
				(number)
				(number)))))

===========
Arrays: hex
===========

resource(x) $"AABB";
resource(x) array { $"AA" $"BB" };
resource(x) array { $"AA", $"BB" };

---

(source_file
	(resource
		(params
			(identifier))
			(hex_string))

	(resource
		(params
			(identifier))
		(array
			(block
				(hex_string))))

	(resource
		(params
			(identifier))
		(array
			(block
				(hex_string)
				(hex_string)))))

==============
Arrays: string
==============

resource(x) "AA" "BB";
resource(x) #'CSTR' array { "AA" "BB" };

resource(x) "AA\0BB";
resource(x) #'CSTR' array { "AA", "BB" };

---

(source_file
	(resource
		(params
			(identifier))
			(string))

	(resource
		(params
			(identifier))
		(typecode)
		(array
			(block
				(string))))

	(resource
		(params
			(identifier))
			(string))

	(resource
		(params
			(identifier))
		(typecode)
		(array
			(block
				(string)
				(string)))))

================
Arrays: typecode
================

resource("PlaylistIcon") #'VICN' array {
	$"6E6369660805010401920200060338D2F73CD163BF82B23B84A94B885046E193"
	$"00A5C5FFBDEAF2FFFFD5E3FF020106023C71C43DE4E9BCEEA63BAE5F49867748"
	$"01ECFFD8E4FA7C7794C9020106023C34913DBF47BD1EE83BAC5E49EA70498C6D"
	$"FFD8E2F37C6385C2020106023E49240000000000003CAAAA4940004A3000FED8"
	$"E4FA7C7794C9020016023A66BABB23523D88443CB3F9489F5D48C17C0001FF27"
	$"020106023A7E6FBB109D3DA2AF3CF54A495C2B486FDC00485C85FFBBCFF70E0A"
	$"07485E4A5E4C5F6043573D455D475D0606AE0BB40BBC1D33C07FB72CBE903C47"
	$"C13EC408CA28BA52C118B656C51BB876BF07B53E3A230605AE02B40BBF4D33C3"
	$"AFB73CC1A43D50C13EC79ECA28BD823AB6BC0605AE02B40BC27D33C6DFB75DC4"
	$"A3BDEFC937C13ECB34CA28C0B23AB9EC0606AE0BB40BBF4D33C3AFB75DC173BD"
	$"EFC607C13EC804CA28BD82C118B920C51BBB40BF07B8083AB6BC0605AE02B57D"
	$"3EB9B9C3EFB7BB44BBB751BD75C936CA8EC1B1402F0A093B593D5BBFCDC93E45"
	$"5BC516C5F160465B435D4544510A045A425E3F5A3D5740060AAFBF0E3B4A3848"
	$"BF6AC4D6414145443D3E363CBF4DBB374B3C4B3C483D49454643C4FEC2D84F3C"
	$"533F4B393B302E3A3D413D413A4208024049543308023B454E3008023541492D"
	$"0802303D432A08022A393E25090A010100000A0001031001178400040A040103"
	$"000A0001021001178400040A030102000A0001011001178400040A020101000A"
	$"0705090A0B0C0D1815FF01178100040A060108202018"
};

---

(source_file
	(resource
		(params
			(string))
			(typecode)
			(array
				(block
					(hex_string)))))

==============
Arrays: nested
==============

resource(21) array
{
	"hello",
	3.14,
	true,
	foo,
	array { "a", "nested", "array" },
	$"AABB"
};

---

(source_file
	(resource
		(params
			(number))
		(array
			(block
				(string)
				(number)
				(constant)
				(identifier)
				(array
					(block
						(string)
						(string)
						(string)))
				(hex_string)))))

=====================
Arrays: import binary
=====================

resource(22) #'PNG ' import "buffy.png";

---

(source_file
	(resource
		(params
			(number))
			(typecode)
			(import
				(string))))
