test/corpus/builtin_types.txt
========================
Builtin Types: app_flags
========================

resource app_flags B_SINGLE_LAUNCH | B_BACKGROUND_APP;

---

(source_file
	(resource
		(builtin
			(identifier)
			(constant)
			(constant))))

============================
Builtin Types: app_signature
============================

resource app_signature "application/x-vnd.Haiku-Switcher";

---

(source_file
	(resource
		(builtin
			(identifier)
			(string))))

==========================
Builtin Types: app_version
==========================

resource app_version {
	major  = 1,
	middle = 0,
	minor  = 0,

	variety = B_APPV_BETA,
	internal = 0,

	short_info = "Test Short Info",
	long_info = "Test Long Info"
};

---

(source_file

	(resource
		(builtin
			(identifier)
			(block
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(constant))
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(string))
				(statement
					(identifier)
					(string))))))

=========================
Builtin Types: file_types
=========================

resource file_types message {
	"types" = "application/x-vnd.haiku-playlist",
	"types" = "application/ogg",
	"types" = "audio",
	"types" = "video"
};

---

(source_file
	(resource
		(builtin
			(identifier)
			(message
				(block
					(statement
						(string)
						(string))
						(statement
						(string)
						(string))
						(statement
						(string)
						(string))
						(statement
						(string)
						(string)))))))

=====================================
Builtin Types: app_name_catalog_entry
=====================================

resource app_name_catalog_entry "x-vnd.Haiku-Switcher:System name:Switcher";

---

(source_file
	(resource
		(builtin
			(identifier)
			(string))))

==========================
Builtin Types: vector_icon
==========================

resource vector_icon {
	$"6E6369660D0500040064020016023BA4CA3BBF52BC04343BEBDB4B681C48B96C"
	$"00EDFFA505FF0200160232FD6F3A991DBE4480369C0E4B47C24869BD0091FFB5"
	$"020016023ACCF03D352ABFAA7A3D335C4C3DCF47577900FFFFE9020006023473"
	$"FD3A4FC4BB97F135D03F4A68F346473800FFEA00FFFFB830020016023BE76A3B"
	$"B6A6BB46133B7111494E7C4A6F7300C4FFA0020016033D7EE2364147B590033C"
	$"C2E347C0584A849200B4FF8DE6650201160239FFFF00000000000039E0004650"
	$"004A2C0000CBFFFF020116023A223C38F309B834003930114A19F84B29CE00CB"
	$"FFFF020116023A69B637CE48B6D7C7399AD944843B4A8BE000CBFFFF02011602"
	$"3C07563AFF39B84D64391DEC46E15A4AB80A00CBFFFF110604EA3E4236455854"
	$"604F6052604C0A044160456054564E530404FE555258585557CAD3C9D15A5CCB"
	$"AFCAAE535D4D59545A4D590404FE544F56575156CA14C93A585BCAE3CA48515C"
	$"4B5552564B550A06364256505631462D462736230A0436283642565056310A06"
	$"524A3A403841544D543352350A06382B38413A403A2E523554330A043A2E3A40"
	$"544B54360A043623362946B87A46270A07224D224F405E425E4C574C532A440A"
	$"062A44224C224D405C425C4C530A084C57425E405E224F224D405C425C4C530A"
	$"0428462A442DC1F12BC2BD0A043D553F5346C8B744C9830A04224C244A29C4BB"
	$"27C5870A04284F2A4D35C71F33C7EB200A01020001000A010102100117820004"
	$"0A0001031001178200040A0001041001178400040A020105000A030106000A04"
	$"0107000A050108000A060109000A00010A1001178402040A07010B000A08010C"
	$"000A09010D2020B3190A09010D2024220A09010D2028240A09010D202C260A09"
	$"010D20B96C280A09010D20BB04B6EF0A09010D20BCB6B7BB0A09010D203DB887"
	$"0A09010D201DB44B0A09010D2021B5170A09010D2025B5E30A09010D2029B6AF"
	$"0A09010D20B83AB77B0A09010D20B9DFB83A0A0A010E20B333B2F30A0B010F20"
	$"B30CB30C0A0C0110000A0B010F2032290A09010D2032BA450A09010D2036BB11"
};

---

(source_file
	(resource
		(builtin
			(identifier)
			(block
				(hex_string)))))

=========================
Builtin Types: large_icon
=========================

resource large_icon array {
	$"FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFFFFFDEDEDEDEFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFFFDED93FD93FDEDEFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFDED93FD93FD93FD904DEFFFFFFFFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFDED93FD93FD93FD93FD93FDEDEDEFFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFDE3FD9000000D93FD93FDED93FD9DEDEFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFDEDE3FDEDED93FD900D93FDED93FD93FD93FDEDEFFFFFFFFFFFF"
	$"FFFFFFFFFFDED93FD93F00DEDE3FD900DE0000003FD93FD93FD9DEFFFFFFFFFF"
	$"FFFFFFFFDED93FD93FD900D93FDEDEDED93FD93F003FD93FD93F8304FFFFFFFF"
	$"FFFFFFDED93FD93FD93F0E000000DEDE000000003FD93FD93F838304FFFFFFFF"
	$"FFFFDED93FD93FD93FD93FD93FDE0E003FDEDE3FD93FD93F83838304FFFFFFFF"
	$"FFFFDEFEFE3FD93FD93FD93FDE3F003FD93FD9DEDED93F8383838304FFFFFFFF"
	$"FFFFDED9D9FEFED93FD93FDE3FD900D93FD93FD93FDE838383838304FFFFFFFF"
	$"FFFFDED9D9D9D9FEFE3FDE3FD93FD900D93FD93FD983DE83838383DEFFFFFFFF"
	$"FFFFDED9D9D9D9D9D9DEFED93FD93FD93FD93FD98383DE83838383DEFFFFFFFF"
	$"FFFFDED9D9D9D9D9D9DED9FEFE3FD93FD93FD9838383DE838383DEFFFFFFFFFF"
	$"FFFF08D9D9D9D9D9D9DED9D9D9FE3FD93FD983838383DE8383DE83DEFFFFFFFF"
	$"FFFFFFDED9D9D9D9D9DED9D9D9D9FEFEFE8383838383DE83DE838304FFFFFFFF"
	$"FFFFFFDEDED9D9D9D9DED9D9D9D9D9D9838383838383DEDE83838304FFFFFFFF"
	$"FFFF08DED9DEDED9D9DED9D9D9D9D9D9838383838383DE838383830413FFFFFF"
	$"FFFFDED9D9D9D9DEDEDED9D9D9D9D9D98383838383DEDE83838383040813FFFF"
	$"FFFFDED9D9D9D9D9D9DEDED9D9D9D9D983838383DE83DE83838304080E13FFFF"
	$"FFFFDED9D9D9D9D9D9DED9DEDED9D9D9838383DE8383DE838304080E1318FFFF"
	$"FFFFDED9D9D9D9D9D9DED9D9D9DEDED98383DE838383DEDE04080E1318FFFFFF"
	$"FFFFDED9D9D9D9D9D9DED9D9D9D9D9DEDEDE83838383DE08080E1318FFFFFFFF"
	$"FFFFFFDEDED9D9D9D9DED9D9D9D9D9D98383838383DE08080E1318FFFFFFFFFF"
	$"FFFFFFFFFFDEDED9D9DED9D9D9D9D9D9838383838304080E1318FFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFDEDEDED9D9D9D9D9D98383838304080E1318FFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFDEDED9D9D9D9D983838304080E1318FFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFFFFFDEDED9D9D9838304080E1318FFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFFFFFFFFFDEDED98304080E1318FFFFFFFFFFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFDEDE080E1318FFFFFFFFFFFFFFFFFFFFFF"
};

---

(source_file
	(resource
		(builtin
			(identifier)
			(block
				(hex_string)))))

========================
Builtin Types: mini_icon
========================

resource mini_icon array {
	$"FFFFFFFFFFDEDEDEFFFFFFFFFFFFFFFF"
	$"FFFFFFFFDED9D9D9DEDEFFFFFFFFFFFF"
	$"FFFFFFDEDED9D9D9D9DEDEDEFFFFFFFF"
	$"FFFFDED9D9DED9D9DED9D9D9DEDEFFFF"
	$"FFDED9D9D9D9DEDED9D9D9D9AB04FFFF"
	$"DEFEFED9D9D9DED9DEDED9AB8304FFFF"
	$"DED9D9FED9DED9D9D9D9DE8383DEFFFF"
	$"DED9D9D9DEFEFED9D9ABDE83DEDEFFFF"
	$"DEDED9D9DED9D9FEAB83DEDE8304FFFF"
	$"DEDEDEDEDED9D9D98383DE838304FFFF"
	$"DED9D9D9DEDED9D983DEDE838308FFFF"
	$"DED9D9D9DED9DEDEDE83DE8308FFFFFF"
	$"FFDED9D9DED9D9D98383DE08FFFFFFFF"
	$"FFFFFFDEDED9D9D9838308FFFFFFFFFF"
	$"FFFFFFFFFFDED9D98308FFFFFFFFFFFF"
	$"FFFFFFFFFFFFFFDE08FFFFFFFFFFFFFF"
};

---

(source_file
	(resource
		(builtin
			(identifier)
			(block
				(hex_string)))))
