test/corpus/comments.txt
=======================
Comments: simple inline
=======================

// this is an inline comment

---

(source_file
    (comment))

==========================
Comments: simple multiline
==========================

/* this is a
   multiline comment */

---

(source_file
    (comment))

=========================================
Comments: intermixed inline and multiline
=========================================

resource app_version {
	major  = 1,
	middle = 0,
	minor  = 0,

	// inline comment test

	variety = B_APPV_BETA,
	internal = 0,

	short_info = "Test Short Info",

	/*
	 * This is a multi-line comment
	 */

	long_info = "Test Long Info"
};

---

(source_file
	(resource
		(builtin
			(identifier)
			(block
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(number))
				(comment)
				(statement
					(identifier)
					(constant))
				(statement
					(identifier)
					(number))
				(statement
					(identifier)
					(string))
				(comment)
				(statement
					(identifier)
					(string))))))
