test/corpus/enum.txt
====
Enum
====

enum
{
	R_AppName = 1,
	R_SomeOtherThing = 2
};

resource(R_AppName) "MyKillerApp";

---

(source_file
	(enum
		(block
			(statement
				(identifier)
				(number))
			(statement
				(identifier)
				(number))))
	(resource
		(params
			(identifier))
			(string)))
